Added query service.  Now calls to SearchAPI project to get info.

--- a/src/app/search-result-dashboard/search-result-dashboard.component.html
+++ b/src/app/search-result-dashboard/search-result-dashboard.component.html
@@ -10,8 +10,8 @@
         style="padding: 5px;"
       >
         <mat-card style="width: 100%; height: 100%; box-sizing: border-box;">
-          <mat-card-title>{{result.title}}</mat-card-title>
-          <mat-card-content>{{result.text}}</mat-card-content>
+          <mat-card-title>{{result.subject}}</mat-card-title>
+          <mat-card-content>{{result.body}}</mat-card-content>
         </mat-card>
     </div>
   </div>
