Just before adding routes.  Goal of having routes with query in URL, and build search result dashboard from that query.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<mat-form-field class="search-form">
-  <input matInput placeholder="Search" type="text">
-</mat-form-field>
-<button button="submit" mat-raised-button color="primary">Search</button>
-
+<app-search-form></app-search-form>
 <app-search-result-dashboard></app-search-result-dashboard>
