--- a/src/app/search-result-dashboard/search-result-dashboard.component.html
+++ b/src/app/search-result-dashboard/search-result-dashboard.component.html
@@ -1,5 +1,5 @@
 <div fxFlex fxLayout="column" fxLayoutGap="10px" style="height: 100vh">
-    <div fxLayout="row wrap" fxLayoutAlign="space-evenly stretch">
+    <div fxLayout="row wrap" fxLayoutAlign="start stretch">
       <div
         *ngFor="let result of searchResults"
         fxFlex="25"
