Added routing with query parameter to create search result dashboard.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-search-form></app-search-form>
-<app-search-result-dashboard></app-search-result-dashboard>
+<!-- <app-search-result-dashboard></app-search-result-dashboard> -->
+<router-outlet></router-outlet>
