--- a/src/app/search-result-dashboard/search-result-dashboard.component.html
+++ b/src/app/search-result-dashboard/search-result-dashboard.component.html
@@ -9,7 +9,7 @@
         fxLayout="column"
         style="padding: 5px;"
       >
-        <mat-card style="width: 100%; height: 100%; box-sizing: border-box;">
+        <mat-card class="card-style">
           <mat-card-title>{{result.subject}}</mat-card-title>
           <mat-card-content>{{result.body}}</mat-card-content>
         </mat-card>
