--- a/src/app/search-result-dashboard/search-result-dashboard.component.html
+++ b/src/app/search-result-dashboard/search-result-dashboard.component.html
@@ -12,9 +12,9 @@
         <mat-card class="card-style">
           <mat-card-title>{{result.subject}}</mat-card-title>
           <mat-card-content [innerHTML]="result.body"></mat-card-content>
-          <!-- <a mat-raised-button href="https://stackoverflow.com/">Stackoverflow</a> -->
-          <!-- <a mat-raised-button [href]="this.safeUrl">Outlook</a> -->
-          <br>{{testResult.safeUrl2}}
+          <mat-card-actions align="end">
+            <a mat-raised-button [href]="result.safeUrl">Outlook</a>
+          </mat-card-actions>
         </mat-card>
     </div>
   </div>
